--- a/astoria_royals/src/Components/Header/Header.css
+++ b/astoria_royals/src/Components/Header/Header.css
@@ -1,7 +1,7 @@
 .hero-header {
   position: relative;
   width: 100%;
-  height: 115vh;
+  height: auto;
   background: url("../../Assets/Desktop/C-1226-Astoria-Royals-Landing-Page-v2.png") center/cover no-repeat;
   overflow: visible;
 }
