--- a/astoria_royals/src/Components/HeroSection/HeroSection.css
+++ b/astoria_royals/src/Components/HeroSection/HeroSection.css
@@ -1,7 +1,7 @@
 .hero-section {
   position: relative;
   width: 100%;
-  min-height: 90vh;
+  height: 115vh;
   background-color: #000;  
   display: flex;
   align-items: center;
